--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -96,18 +96,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_nor.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_flash.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_flash_ex.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_flash_ramfunc.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Display\Display.cpp">
       <Filter>Display</Filter>
     </ClCompile>
@@ -228,9 +216,6 @@
     <ClCompile Include="..\..\Device\src\FlashDrive\FlashDrive.cpp">
       <Filter>FlashDrive</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rtc.c">
-      <Filter>libs\HAL</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Display\Console.cpp">
       <Filter>Display</Filter>
     </ClCompile>
@@ -310,27 +295,6 @@
       <Filter>libs\USBH</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Device\src\libs\USBH\usbh_diskio.cpp">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Src\usbh_msc.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Src\usbh_msc_bot.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Src\usbh_msc_scsi.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_core.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_ctlreq.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_ioreq.c">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_pipes.c">
       <Filter>libs\USBH</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Device\src\defines.cpp">
@@ -452,51 +416,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_adc.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_adc_ex.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_cortex.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_gpio.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_pcd.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_rcc.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_spi.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_sram.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_ll_usb.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_nor.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_flash.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_flash_ex.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_flash_ramfunc.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\Display\Display.h">
       <Filter>Display</Filter>
     </ClInclude>
@@ -638,9 +557,6 @@
     <ClInclude Include="..\..\Device\src\FlashDrive\FlashDrive.h">
       <Filter>FlashDrive</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_rtc.h">
-      <Filter>libs\HAL</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\Display\Console.h">
       <Filter>Display</Filter>
     </ClInclude>
@@ -717,27 +633,6 @@
       <Filter>libs\USBH</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\libs\USBH\usbh_diskio.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc\usbh_msc.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc\usbh_msc_bot.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc\usbh_msc_scsi.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_core.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_ctlreq.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_ioreq.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_pipes.h">
       <Filter>libs\USBH</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Utils\Measure.h">
@@ -820,6 +715,27 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\device.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_gpio.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_def.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_adc.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_dma.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\HAL\stm32f4xx_hal_tim.h">
+      <Filter>libs\HAL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\FatFS\ff_gen_drv.h">
+      <Filter>libs\FatFS</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\FatFS\diskio.h">
+      <Filter>libs\FatFS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
